<resources>
    <string name="app_name">StorezaapDemo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_stores">Store</string>
    <string name="menu_services">Service</string>
    <string name="menu_news">News</string>
    <string name="menu_user">User</string>
    <string name="menu_logout">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signuphere">Create an Account ? SignUp</string>
    <string name="signup">Sign Up</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="loginhere">Already have an account ? Login Here</string>
</resources>