<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_stores"
            android:icon="@drawable/services"
            android:title="@string/menu_stores" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/support"
            android:title="@string/menu_services" />
        <item
            android:id="@+id/newsFragment"
            android:icon="@drawable/news"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/userFragment"
            android:icon="@drawable/user"
            android:title="@string/menu_user" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>
</menu>